# ysw

./: .clang-format  Assignment.md  CMakeLists.txt  Makefile  README_Eng.md  README_Kor.md  getpid.c  out.c  prompt.c  settings.cfg
Animations/: NewAnim.txt
Assets/images/: Asteroid.spt  Cat.spt  Character.spt  Crates1.spt  Crates2.spt  Crates3.spt  Crates5.spt  Explosion.anm  Flame.anm  Hit.spt  Laser.spt  MeteorFade.anm  Red.spt  RobotAngry.anm  RobotBroken.anm  ship.spt
Assets/save/: save0.json
Assets/scripts/: script_0.txt  triggers.txt
Assets/shaders/: APPLY_PROMPT.md  Bloom.frag  Cradle.frag  Cradle.vart  EffectsGuide.h  OriPostProcessing.h  PostProcess.vert  Vignette.frag  background.frag  basic.vert  batch.frag  batch.vert  bright_pass.frag  composite.frag  fog.frag  fullscreen.vert  gaussian_blur.frag  god_rays.frag  health_vignette.frag  instance.vert  laser.vert  laser_core.frag  laser_glow.frag  star_glow.frag  star_glow.vert  upsample.frag  water.frag  water.vert
Assets/shaders/BatchRenderer2D/: batch.frag
Assets/shaders/ImmediateRenderer2D/: quad.frag  sdf.frag
Assets/shaders/InstancedRenderer2D/: Instanced.frag  Instanced.vert
Assets/sounds/: CMakeLists.txt
Assets/sounds/Assets/images/: Asteroid.spt  Meteor.spt  Robot.spt  RobotWalking.anm
Assets/sounds/Assets/shaders/: Cradle.frag  background.frag  background.vert  star_glow.frag  star_glow.vert
Assets/sounds/Assets/shaders/BatchRenderer2D/: batch.vert
Assets/sounds/Assets/shaders/ImmediateRenderer2D/: quad.vert  sdf.frag  sdf.vert
Assets/sounds/cmake/: CompilerWarnings.cmake  Dependencies.cmake
Assets/sounds/cmake/dependencies/: SDL2_mixer.cmake
Assets/sounds/source/: CMakeLists.txt  main.cpp
Assets/sounds/source/CS200/: Image.hpp  ImmediateRenderer2D.hpp  InstancedRenderer2D.cpp  InstancedRenderer2D.hpp  NDC.hpp  RGBA.hpp  Renderer2DUtils.cpp  Renderer2DUtils.hpp
Assets/sounds/source/Engine/: Animation.cpp  Animation.hpp  AnimationEditor.hpp  Audio.cpp  AudioManager.cpp  Camera.cpp  Camera.hpp  Component.hpp  ComponentManager.hpp  Dash.hpp  Engine.cpp  Engine.hpp  GameObjectManager.cpp  GameObjectTypes.hpp  GameStateManager.cpp  GameStateManager.hpp  InputMapper.hpp  Logger.hpp  MapElement.cpp  MapElement.h  MapManager.cpp  MapManager.h  Matrix.hpp  Particle.cpp  Particle.hpp  Polygon.h  SettingsManager.cpp  SettingsManager.hpp  ShowCollision.cpp  ShowCollision.hpp  Skeleton.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Vec2.hpp  Window.cpp  Window.hpp
Assets/sounds/source/Engine/Physics/: Reflection.cpp  Reflection.hpp
Assets/sounds/source/Game/: Bonfire.cpp  Bonfire.hpp  BossStar.cpp  BossStar.hpp  Door.cpp  Gate.hpp  MainMenu.hpp  MiniMap.cpp  MiniMap.hpp  Mirror.hpp  Mode1.cpp  Mode1.hpp  Player.cpp  Player.hpp  RedLaser.cpp  RedLaser.hpp  Shield.hpp  Sign.cpp  Splash.hpp  Star.cpp  TargetStar.hpp  WorldTextManager.cpp  WorldTextManager.hpp  YellowLaser.hpp
Assets/sounds/source/OpenGL/: Framebuffer.cpp  Texture.hpp
Assets/textures/: pillar.spt
cmake/dependencies/: SDL2_mixer.cmake
driver/: CMakeLists.txt  tests.cpp  tests.h
source/: BatchRenderer2D.cpp  BatchRenderer2D.hpp  CMakeLists.txt  IRenderer2D.hpp  ImmediateRenderer2D.cpp  ImmediateRenderer2D.hpp  InstancedRenderer2D.cpp  InstancedRenderer2D.hpp  JobSystem.cpp  JobSystem.h  Random.hpp  demo.cpp  main.cpp
source/CS200/: BatchRenderer2D.cpp  BatchRenderer2D.hpp  IRenderer2D.hpp  Image.cpp  ImmediateRenderer2D.cpp  RGBA.hpp  RenderingAPI.cpp
source/Demo/: DemoAstar.cpp  DemoAstar.hpp  DemoReflection.cpp  DemoReflection.hpp
source/Engine/: Animation.cpp  AnimationEditor.cpp  AnimationEditor.hpp  Audio.cpp  Audio.hpp  AudioManager.cpp  AudioManager.h  AudioManager.hpp  AudioTypes.hpp  BackgroundElement.cpp  BackgroundElement.hpp  Bone.hpp  Camera.cpp  Camera.hpp  Collision.cpp  Collision.hpp  CountdownTimer.cpp  CountdownTimer.hpp  Dash.cpp  Dash.hpp  Engine.cpp  Font.cpp  Font.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  GameObjectTypes.hpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  Input.cpp  Input.hpp  InputMapper.cpp  InputMapper.hpp  Logger.cpp  MapElement.cpp  MapElement.h  MapManager.cpp  MapManager.h  (+13 more)
source/Engine/Physics/: Reflection.cpp  Reflection.hpp
source/Game/: Bonfire.cpp  Bonfire.hpp  Boss1.cpp  Boss1.hpp  BossConfig.hpp  BossController.cpp  BossController.hpp  BossLaser.cpp  BossLaser.hpp  BossLaserManager.cpp  BossLaserManager.hpp  BossPatternController.cpp  BossPatternController.hpp  BossStar.cpp  BossStar.hpp  BossTypes.hpp  BreakableWall.cpp  BreakableWall.hpp  BullBoss.cpp  BullBoss.hpp  Constellation.cpp  Constellation.hpp  CutscenePlayer.cpp  CutscenePlayer.hpp  Door.cpp  Door.hpp  DoorActionHandler.cpp  DoorActionHandler.hpp  Elevator.cpp  Elevator.hpp  FallCutscene.cpp  FallCutscene.hpp  FallingBlock.cpp  FallingBlock.hpp  Gate.cpp  Gate.hpp  HostileStar.cpp  HostileStar.hpp  InGameScriptEditor.cpp  InGameScriptEditor.hpp  (+89 more)
source/OpenGL/: Buffer.cpp  Texture.cpp  VertexArray.cpp
